fix: delete horizontal scroll

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -6,10 +6,11 @@
   color: #131313;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
+  width: 150px;
   margin-bottom: 80px;
 }
 .cards {
-
+  max-width: 100%;
 }
 .cards__items {
   width: 875px;
@@ -118,6 +119,7 @@
   }
   .cards__items {
     width: 340px;
+    min-width: 240px;
     display: flex;
     flex-direction: column;
   }
