--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,15 @@ body {
   display: none;
 }
 
+@media (max-width: 1440px) {
+  .container-cards {
+    padding: 80px 0 80px 100px;
+  }
+  .container-posts {
+    padding: 0 0 100px 100px;
+  }
+}
+
 @media (max-width: 1024px) {
   .block--mb-disabled{
     display: none;
@@ -34,7 +43,7 @@ body {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 500px) {
   .container-cards {
     padding: 0 18px;
   }
